2008-02-21  Steve M. Robbins  <smr@sumost.ca>
	* examples/cppunittest/OrthodoxTest.h:
	* examples/cppunittest/XMLOutputterTest.cpp:
	* examples/hierarchy/main.cpp:
	* include/cppunit/extensions/ExceptionTestCaseDecorator.h:
	* src/cppunit/BriefTestProgressListener.cpp:
	* src/cppunit/TestFactoryRegistry.cpp:
	* src/cppunit/TestPlugInDefaultImpl.cpp:
	* src/cppunit/TestSuccessListener.cpp:
	* src/cppunit/TextProgressListener.cpp:
	* src/cppunit/XmlOutputterHook.cpp:
	* src/DllPlugInTester/CommandLineParserTest.cpp:
	* src/DllPlugInTester/DllPlugInTesterTest.cpp: Changes to suppress 
	warnings of gcc -Wall -W -ansi, mainly from patch [1898225].

2008-12-16 Andy Dent
	* src/msvc6/testrunner/MsDevCallerListCtrl.cpp: 
	* INSTALL-VS.Net2008.txt: Added updated project and instructions for 
	building under Visual Studio.Net 2008 and fixed compilation issue.

2008-10-12  Baptiste Lepilleur <blep@users.sourceforge.net>

   * doc/cookbook.dox: fixed typos.


2008-02-20  Steve M. Robbins  <smr@sumost.ca>

	* examples/money/MoneyTest.h (TestFixture): Change deprecated
	CPPUNIT_TEST_EXCEPTION to simple CPPUNIT_TEST.
	* examples/money/MoneyTest.cpp (testAddThrow): Wrap throwing
	expression "money += money123FF" inside CPPUNIT_ASSERT_THROW().

	* Changes to build without warnings using gcc -Wall -W -ansi.
	Applied patch [1898225] to remove name of unused argument and use
	no-arg version of main(). Tested on both GCC 4.2.3 and a
	prerelease of GCC 4.3.0.
	* examples/cppunittest/assertion_traitsTest.cpp (test_toString):
	Change template parameter of
	CPPUNIT_NS::assertion_traits<char*>::toString() to const char*,
	avoiding a deprecated conversion from string literal to char*.
	* src/DllPlugInTester/CommandLineParserTest.cpp (parse): move
	semicolon of empty loop body to its own line, avoiding a warning
	in GCC 4.3.

2008-02-20  Steve M. Robbins  <smr@sumost.ca>

	* configure.in: Update CPPUNIT_MICRO_VERSION for release 1.12.1.

2008-02-07  Steve M. Robbins  <smr@sumost.ca>
