@@ -1,3 +1,9 @@
+Applied patch #2807259
+      contributed by Jan Echternach. LIBADD_DL contains a list of libraries
+      like "-ldl". Thus, it should be in LDADD instead of LDFLAGS in case
+      one of the libraries depends on a path set in LDFLAGS.
+      
+
   New in CppUnit 1.12.1:
   ----------------------
 
